# grok-code-rs

./: .env.example  .gitignore  Cargo.toml  README.md  test_read_all_code.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: events.rs  lib.rs  session.rs
core/src/agent/: agent_logic.rs  mock.rs  mod.rs  openrouter.rs
core/src/prompts/: system_prompt.md
core/src/tools/: executor.rs  mod.rs  registry.rs  types.rs
core/src/tools/executors/: code.rs  fs.rs  llm.rs  mod.rs  shell.rs
core/src/tools/executors/fs/: simple_edit.rs
core/src/tools/tests/: code_executor_tests.rs  executor_tests.rs  fs_executor_tests.rs  llm_executor_tests.rs  mod.rs  registry_tests.rs  shell_executor_tests.rs  types_tests.rs
tui/: Cargo.toml
tui/src/: app.rs  events.rs  lib.rs  main.rs  markdown.rs  state.rs  utils.rs
tui/src/components/: chat.rs  command_palette.rs  input.rs  mod.rs  status.rs  tools.rs
tui/src/handlers/: events.rs  input.rs  mod.rs
