[workspace]
members = [
    "core",
    "tui", 
    "cli"
]
resolver = "2"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# TUI
ratatui = "0.26"
crossterm = "0.27"

# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"

[workspace.dependencies.tokio-test]
version = "0.4"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
