[package]
name = "grok-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grok-tui"
path = "src/main.rs"

[dependencies]
grok-core = { path = "../core" }

tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = "1.0"

# TUI dependencies
ratatui = { workspace = true }
crossterm = { workspace = true }
dotenvy = "0.15"

# Markdown parsing
pulldown-cmark = "0.11"
serde = { version = "1.0", features = ["derive"] }
